[package]
name = "Rustgram"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
rustls = "0.20"
tokio-rustls = "0.23"
tokio-tungstenite = "0.16"
tracing = "0.1"
tracing-subscriber = "0.2"

